# SurveyFramework

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ImportXml.py  LICENSE.md  README.md  Usage example.ipynb  generate_likert_plots_dummy_data.py  leibniz-anonymised-data.csv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
Leibniz Results - N2 survey/: limesurvey_survey_275333.lss  results-survey275333.csv
data/: ImportXml.py  data_description.md  dummy_data_2021_codeonly.csv  dummy_data_2021_codeonly_v2.csv  dummy_data_codeandtext.csv  dummy_data_codeonly.csv  survey_structure.xml  survey_structure_2021.xml  survey_structure_2021_v2.xml  test-survey-structure.lss  test-survey-structure.xml  test_survey_structure.lss  test_survey_structure.xml
data/questionaires_pdfs/: Survey2021_structure_Helmholtz.xml  Survey2021_structure_Leibniz.xml  Survey2021_structure_MPS.xml  Survey2021_structure_TUM.xml
n2survey/: __init__.py  lime.py  read_from_xml.py
n2survey/lime/: __init__.py  structure.py  survey.py  transformations.py
n2survey/plot/: __init__.py  array_single_choice_comparison.py  bar.py  bar_plot.py  color_schemes.py  common.py  comparison_shared_functions.py  multiple_multiple_comparison.py  multiple_simple_comparison.py  plot_free_numbers.py  plot_likert.py  plot_multiple_choice.py  plot_numeric_comparison.py  simple_comparison.py  simple_comparison_plot.py
n2survey/tutorials/: First_look_data.ipynb
tests/: common.py  test_bar_plot.py  test_lime.py  test_lime_structure.py  test_lime_survey.py  test_lime_transformations.py  test_n2survey.py  test_plot.py  test_simple_comparison_plot.py
