[tool.poetry]
name = "n2survey"
version = "0.1.0"
description = "Python framework to analyze the N2 Network surveys"
authors = ["Rustam Giuliev <glvrst@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
isort = "^5.9.3"
autoflake = "^1.4"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true
old_finders=true
default_section="FIRSTPARTY"
combine_as_imports=true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
